--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           <h3 class="sidebar-title">Contacts</h3>
           <div>
             <p>
-              <span class="contact-type">C:</span>
+              <!-- <span class="contact-type"></span> -->
               <a
                 href="tel:+38 096 247 54 86"
                 class="contact-link"
@@ -201,7 +201,7 @@
               >
             </p>
             <p>
-              <span class="contact-type">E:</span>
+              <!-- <span class="contact-type"></span> -->
               <a
                 href="mailto:veronikat30@gmail.com"
                 class="contact-link"
