--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             I want to acquire a new profession, get an interesting and valuable education and learn
             from professionals. I'm looking for a full-time position in a company which supports
             development. I develop my knowledge in HTML, CSS, JavaScript and React. I know how to
-            work in a team and am ready to study, practice and develop new knowledge.
+            work in a team and I am ready to study, practice and develop new knowledge.
           </p>
         </div>
         <!--Projects-->
@@ -108,7 +108,7 @@
                   rel="noopener nofollow noreferrer"
                   target="_blank"
                   >Contacts Book</a
-                >........................<span class="project-bracket">[</span>React,Redux Toolkit,
+                >........................<span class="project-bracket">[</span>React, Redux Toolkit,
                 Redux, axios, nanoid, JavaScript
                 <span class="project-bracket">]</span>
               </span>
