--- a/index.html
+++ b/index.html
@@ -121,6 +121,51 @@
                 Build project on github, check for build errors and live page performance.
               </p>
             </li>
+            <li class="projects-item">
+              <span class="project">
+                <a
+                  href="https://bohdan100.github.io/so-yummy-frontend"
+                  class="project-link"
+                  rel="noopener nofollow noreferrer"
+                  target="_blank"
+                  >SoYummy</a
+                >........................<span class="project-bracket">[</span>React, React Router,
+                Redux Toolkit, Redux, JavaScript
+                <span class="project-bracket">]</span>
+              </span>
+              <span class="project">
+                <a
+                  href="https://github.com/Bohdan100/so-yummy-backend"
+                  class="project-link"
+                  rel="noopener nofollow noreferrer"
+                  target="_blank"
+                  >SoYummy-backend</a
+                >........................<span class="project-bracket">[</span>JavaScript, Node.js,
+                Express, Mongoose, morgan, multer, nodemailer
+                <span class="project-bracket">]</span>
+              </span>
+              <span class="project">
+                <a
+                  href="https://so-yummy-98ev.onrender.com/api-docs/"
+                  class="project-link"
+                  rel="noopener nofollow noreferrer"
+                  target="_blank"
+                  >Swagger</a
+                >
+              </span>
+              <p class="description">
+                A team project to create a site with delicious recipes and the possibility of adding
+                your own recipes. There is also an option with the possibility of compiling a
+                shopping list of the necessary ingredients for dishes.
+              </p>
+              <p class="description">Role: Developer.</p>
+              <p class="description">
+                Site SoYummy was made by technology stack: Styled-components, @mui/material, axios,
+                uuid, Formik, Yup, React-icons, React-toastify, bcryptjs, cloudinary, joi,
+                jsonwebtoken, multer-storage-cloudinary, Webpack, GoogleCloud, Figma, Git/GitHub,
+                Postman, MongoDB, Netlify, pagination.
+              </p>
+            </li>
           </ol>
         </div>
         <!--Work-->
@@ -145,20 +190,6 @@
               </li>
               <li class="work-list-item">
                 Maintaining a payment calendar and drawing up operational reports
-              </li>
-            </ul>
-          </div>
-          <!--Company 2-->
-          <div>
-            <h4 class="work-position">Civil Engineer <span class="organization">CEM LTD</span></h4>
-            <p class="period">
-              October 2017 - October 2019 <span class="line">|</span> Kyiv, Ukraine
-            </p>
-            <ul class="work-list">
-              <li class="work-list-item">Drafting of commercial offers</li>
-              <li class="work-list-item">Monitoring of prices for materials</li>
-              <li class="work-list-item">
-                Keeping registers of mutual settlements with subcontractors
               </li>
             </ul>
           </div>
