--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 your own recipes. There is also an option with the possibility of compiling a
                 shopping list of the necessary ingredients for dishes.
               </p>
-              <p class="description">Role: Developer.</p>
+              <p class="description">Role: Developer, creating the project presentation.</p>
               <p class="description">
                 Site SoYummy was made by technology stack: Styled-components, @mui/material, axios,
                 uuid, Formik, Yup, React-icons, React-toastify, bcryptjs, cloudinary, joi,
